# nixos-config

./: .editorconfig  .envrc  .gitignore  .sops.yaml  README.md  flake.nix  shell.nix  theme.nix  treefmt.nix
.github/workflows/: check.yml
common/: theme.nix
configs/home/: default.nix
configs/nixos/: default.nix
home/: default.nix  files.nix  home.nix  looks.nix  meta.nix  xdg.nix  zsh.nix
home-manager/: home.nix
home-manager/modules/: bat.nix  default.nix  fastfetch.nix  gtk-qt.nix  kitty.nix  obs-studio.nix  rofi.nix  tmux.nix  xdg.nix  zsh.nix
home/programs/: bat.nix  cava.nix  default.nix  fastfetch.nix  foot.nix  git.nix  gowall.nix  kitty.nix  nom.nix  peaclock.nix  r.nix  swayimg.nix  tmux.nix  yazi.nix  zsh.nix
home/sops/: default.nix
home/wm/: dunst.nix  (+8 more)
hosts/: default.nix
iso/: default.nix  iso-image.nix
lib/: builders.nix  default.nix  math.nix  river.nix  strings.nix
nixos/: configuration.nix  hardware-configuration.nix
overlays/: default.nix
pkgs/: default.nix  exe2png.nix  fuzzel-power-menu.nix  inkscape-figures.nix  kotlin-lsp.nix  make-writable.nix  mdformat-myst.nix  mdformat-obsidian.nix  mdformat-ruff.nix  menu-qalc.nix  mmtui.nix  modded.nix  mopidy-discord-rpc.nix  nextpnr-xilinx.nix  roundn.nix  volume-update.nix  waybar-dunst-state.nix  waybar-media-query.nix
profiles/home/ttymax/programs/plates/config/templates/cpp-cmake/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  _plates.yml
system/: boot.nix  console.nix  default.nix  laptop.nix  locale.nix  network.nix  nix.nix  packages.nix  services.nix  users.nix
(+737 files in other folders)
